manifest/objects/Message_Bus_Toggle__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Enable_MB_LV_Island__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable LV Custom Object Creation</inlineHelpText>
        <label>Enable MB LV Island</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_MB_LV_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to Control Message Bus rest callout</description>
        <label>Enable MB LV Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_MB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable MB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Email_Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error Email Enable</label>
        <type>Checkbox</type>
    </fields>
    <label>Message Bus Toggle</label>
</CustomObject>